[gd_scene load_steps=10 format=2]

[ext_resource path="res://Top Down Shooter Assets/BitPap.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://hud.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -67.0
margin_top = 212.0
margin_right = -23.0
margin_bottom = -126.0
rect_scale = Vector2( 3, 3 )
custom_styles/focus = SubResource( 8 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "START"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_right = -307.0
margin_bottom = 16.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="."]
anchor_left = 0.676
anchor_right = 0.998
anchor_bottom = 0.089
margin_left = 0.039978
margin_right = -74.08
margin_bottom = -16.04
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.866667, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_top = 0.244
anchor_right = 1.0
anchor_bottom = 0.244
margin_top = -13.84
margin_right = -368.0
margin_bottom = 2.16
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "BULLET HECK"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreMessage" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -16.0
margin_right = -230.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "NEW HIGH SCORE!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverText" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -68.6693
margin_right = -307.0
margin_bottom = -54.6693
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
